bug fix FTP loader, add metadata to database, update tests

--- a/tests/notebooks/test_database.ipynb
+++ b/tests/notebooks/test_database.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from oligo_designer_toolsuite.database import CustomGenomicRegionGenerator, NcbiGenomicRegionGenerator, EnsemblGenomicRegionGenerator, OligoDatabase\n",
     "from oligo_designer_toolsuite.utils import GffParser\n",
-    "from oligo_designer_toolsuite.oligo_efficiency import (\n",
+    "from oligo_designer_toolsuite.oligo_efficiency_filter import (\n",
     "    PadlockOligoScoring,\n",
     "    PadlockSetScoring,\n",
     ")\n",
@@ -42,28 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "CustomGenomicRegionGenerator.__init__() got an unexpected keyword argument 'source'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m annotation_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      2\u001b[0m sequence_file \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m region_generator_ncbi \u001b[39m=\u001b[39m CustomGenomicRegionGenerator(annotation_file, sequence_file, source\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mNCBI\u001b[39;49m\u001b[39m\"\u001b[39;49m, species \u001b[39m=\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mHomo_sapiens\u001b[39;49m\u001b[39m\"\u001b[39;49m, annotation_release\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m110\u001b[39;49m\u001b[39m\"\u001b[39;49m, genome_assembly\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mGRCh38\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(region_generator_ncbi\u001b[39m.\u001b[39mannotation_file)\n\u001b[1;32m      5\u001b[0m \u001b[39mprint\u001b[39m(region_generator_ncbi\u001b[39m.\u001b[39msequence_file)\n",
-      "\u001b[0;31mTypeError\u001b[0m: CustomGenomicRegionGenerator.__init__() got an unexpected keyword argument 'source'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\n",
+      "../data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\n",
+      "NCBI\n",
+      "Homo_sapiens\n",
+      "110\n",
+      "GRCh38\n"
      ]
     }
    ],
    "source": [
-    "annotation_file = \"../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\"\n",
-    "sequence_file = \"../data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\"\n",
-    "region_generator_ncbi = CustomGenomicRegionGenerator(annotation_file, sequence_file, source=\"NCBI\", species = \"Homo_sapiens\", annotation_release=\"110\", genome_assembly=\"GRCh38\")\n",
+    "annotation_file = \"../data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gtf\"\n",
+    "sequence_file = \"../data/annotations/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.fna\"\n",
+    "region_generator_ncbi = CustomGenomicRegionGenerator(annotation_file, sequence_file, files_source=\"NCBI\", species = \"Homo_sapiens\", annotation_release=\"110\", genome_assembly=\"GRCh38\")\n",
     "print(region_generator_ncbi.annotation_file)\n",
     "print(region_generator_ncbi.sequence_file)\n",
-    "print(region_generator_ncbi.source)\n",
+    "print(region_generator_ncbi.files_source)\n",
     "print(region_generator_ncbi.species)\n",
     "print(region_generator_ncbi.annotation_release)\n",
     "print(region_generator_ncbi.genome_assembly)"
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/annotations/custom_Homo_sapiens.GRCh38.108.chr16.gtf\n",
+      "../data/annotations/custom_Homo_sapiens.GRCh38.dna_rm.primary_assembly_chr16.fa\n",
+      "Ensembl\n",
+      "Homo_sapiens\n",
+      "108\n",
+      "GRCh38\n"
+     ]
+    }
+   ],
    "source": [
-    "annotation_file = \"../data/custom_Homo_sapiens.GRCh38.108.chr16.gtf\"\n",
-    "sequence_file = \"../data/custom_Homo_sapiens.GRCh38.dna_rm.primary_assembly_chr16.fa\"\n",
-    "region_generator_ensembl = CustomGenomicRegionGenerator(annotation_file, sequence_file, source=\"Ensembl\", species = \"Homo_sapiens\", annotation_release=\"108\", genome_assembly=\"GRCh38\")\n",
+    "annotation_file = \"../data/annotations/custom_Homo_sapiens.GRCh38.108.chr16.gtf\"\n",
+    "sequence_file = \"../data/annotations/custom_Homo_sapiens.GRCh38.dna_rm.primary_assembly_chr16.fa\"\n",
+    "region_generator_ensembl = CustomGenomicRegionGenerator(annotation_file, sequence_file, files_source=\"Ensembl\", species = \"Homo_sapiens\", annotation_release=\"108\", genome_assembly=\"GRCh38\")\n",
     "print(region_generator_ensembl.annotation_file)\n",
     "print(region_generator_ensembl.sequence_file)\n",
-    "print(region_generator_ensembl.source)\n",
+    "print(region_generator_ensembl.files_source)\n",
     "print(region_generator_ensembl.species)\n",
     "print(region_generator_ensembl.annotation_release)\n",
     "print(region_generator_ensembl.genome_assembly)"
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,17 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "ncbi_transcriptome = \"./output/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_100.fna\"\n",
-    "reference = ReferenceDatabase(ncbi_transcriptome, source=region_generator_ncbi.source, species=region_generator_ncbi.species, annotation_release=region_generator_ncbi.annotation_release, genome_assembly=region_generator_ncbi.genome_assembly)"
+    "metadata = {\"annotation_source\": region_generator_ncbi.files_source, \"species\": region_generator_ncbi.species, \"annotation_release\": region_generator_ncbi.annotation_release, \"genome_assembly\": region_generator_ncbi.genome_assembly}\n",
+    "reference = ReferenceDatabase(ncbi_transcriptome, metadata=metadata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +203,7 @@
     "    region, _, _, = parse_fasta_header(entry.id)\n",
     "    assert region == 'AARS1', f\"error: this region {region} should be filtered out.\"\n",
     "file_fasta_database = reference.write_fasta_from_database(filename = \"filtered_databse\")\n",
+    "file_metadata_database = reference.write_metadata_from_database(filename = \"filtered_databse\")\n",
     "assert check_fasta_format(file_fasta_database) == True, \"error: wrong file format\""
    ]
   },
@@ -201,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,44 +234,44 @@
     ")\n",
     "\n",
     "genes = [\"AARS1\",\"DECR2\",\"FAM234A\",\"RHBDF1\",\"WASIR2\"]\n",
-    "ncbi_transcriptome = \"./output/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_100.fna\"\n"
+    "ncbi_transcriptome = \"./output/annotation/transcriptome_source_NCBI_species_Homo_sapiens_annotation_release_110_genome_assemly_GRCh38_incl_exonjunctions_of_size_100.fna\"\n",
+    "metadata = {\"annotation_source\": region_generator_ncbi.files_source, \"species\": region_generator_ncbi.species, \"annotation_release\": region_generator_ncbi.annotation_release, \"genome_assembly\": region_generator_ncbi.genome_assembly}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "oligos = OligoDatabase(file_fasta = ncbi_transcriptome,\n",
-    "    oligo_length_min = 90,\n",
-    "    oligo_length_max = 90,\n",
+    "oligos = OligoDatabase(\n",
     "    min_oligos_per_region = 0,\n",
-    "    source = region_generator_ncbi.source,\n",
-    "    species = region_generator_ncbi.species,\n",
-    "    annotation_release = region_generator_ncbi.annotation_release,\n",
-    "    genome_assembly = region_generator_ncbi.genome_assembly,\n",
+    "    metadata = metadata,\n",
     "    n_jobs = 2\n",
     ")\n",
-    "oligos.create_oligo_database(region_ids=genes) \n",
-    "file_database = oligos.save_oligo_database()\n",
-    "oligos.load_oligo_database(file_database)\n",
+    "oligos.create_database(file_fasta=ncbi_transcriptome,\n",
+    "                       oligo_length_min=30,\n",
+    "                       oligo_length_max=35,\n",
+    "                       region_ids=genes) \n",
+    "file_database, file_metadata = oligos.write_database(filename=\"test_db\")\n",
+    "oligos.load_database(file_database)\n",
+    "assert oligos.metadata == {}, \"error: metadata not cleared\"\n",
     "file_fasta = oligos.write_fasta_from_database()\n",
     "assert check_fasta_format(file_fasta) == True, \"error: wrong file format\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<oligo_designer_toolsuite.database._oligos_database.OligoDatabase at 0x16aa583a0>"
+       "<oligo_designer_toolsuite.database._oligos_database.OligoDatabase at 0x12c509370>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n"
+      "39788\n"
      ]
     }
    ],
@@ -336,7 +352,7 @@
   "kernelspec": {
    "display_name": "ODT",
    "language": "python",
-   "name": "python3"
+   "name": "odt"
   },
   "language_info": {
    "codemirror_mode": {
@@ -348,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
