--- a/tutorials/build_a_custom_pipeline.ipynb
+++ b/tutorials/build_a_custom_pipeline.ipynb
@@ -80,7 +80,9 @@
     "\n",
     "# only needed when custom config used\n",
     "config[\"source_params\"][\"file_annotation\"] = os.path.join(dir_package, config[\"source_params\"][\"file_annotation\"]) \n",
-    "config[\"source_params\"][\"file_sequence\"] = os.path.join(dir_package, config[\"source_params\"][\"file_sequence\"]) "
+    "config[\"source_params\"][\"file_sequence\"] = os.path.join(dir_package, config[\"source_params\"][\"file_sequence\"]) \n",
+    "\n",
+    "metadata = {\"files_source\" : config[\"source\"], \"source_params\" : config[\"source_params\"]}"
    ]
   },
   {
@@ -187,10 +189,7 @@
     "# define the database class\n",
     "oligo_database = OligoDatabase(\n",
     "    min_oligos_per_region = config[\"min_probes_per_gene\"],\n",
-    "    files_source = region_generator.files_source,\n",
-    "    species = region_generator.species,\n",
-    "    annotation_release = region_generator.annotation_release,\n",
-    "    genome_assembly = region_generator.genome_assembly,\n",
+    "    metadata = metadata,\n",
     "    n_jobs = 2,\n",
     "    dir_output=dir_output\n",
     ")\n",
@@ -381,10 +380,7 @@
     "\n",
     "reference = ReferenceDatabase(\n",
     "    file_fasta = file_transcriptome,\n",
-    "    files_source = region_generator.files_source,\n",
-    "    species = region_generator.species,\n",
-    "    annotation_release = region_generator.annotation_release,\n",
-    "    genome_assembly = region_generator.genome_assembly,\n",
+    "    metadata = metadata,\n",
     "    dir_output=dir_output\n",
     "    )\n",
     "\n",
