--- a/tests/notebooks/test_utils.ipynb
+++ b/tests/notebooks/test_utils.ipynb
@@ -26,19 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gff3', '108', 'GRCh38')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gtf', '108', 'GRCh38')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.dna_rm.primary_assembly.fa', '108', 'GRCh38')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##### Test Loader Ensemble\n",
     "\n",
@@ -61,22 +51,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### Test Loader NCBI\n",
+    "\n",
+    "## Test for release <= 110\n",
+    "#Parameters\n",
+    "dir_output = os.path.join(os.path.dirname(os.getcwd()), 'output') # create the complete path for the output directory\n",
+    "\n",
+    "taxon = 'vertebrate_mammalian' # taxon the species belongs to\n",
+    "species= 'Homo_sapiens' # available species: human or mouse\n",
+    "annotation_release= '110'\n",
+    "\n",
+    "#initialize\n",
+    "loader_ncbi=FtpLoaderNCBI(dir_output, taxon, species, annotation_release)\n",
+    "\n",
+    "#retrieve files\n",
+    "print(loader_ncbi.download_files(\"gff\"))\n",
+    "print(loader_ncbi.download_files(\"gtf\"))\n",
+    "print(loader_ncbi.download_files(\"fasta\"))\n",
+    "\n",
+    "shutil.rmtree(dir_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gff', '110', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gtf', '110', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.fna', '110', 'GRCh38.p14')\n"
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.gff', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.gtf', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.fna', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n"
      ]
     }
    ],
    "source": [
-    "##### Test Loader NCBI\n",
-    "\n",
+    "## Test for release > 110 -> changed folder structure\n",
     "#Parameters\n",
     "dir_output = os.path.join(os.path.dirname(os.getcwd()), 'output') # create the complete path for the output directory\n",
     "\n",
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,64 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** KeyboardInterrupt exception caught in code being profiled.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filename: /Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/Toolsuite/oligo-designer-toolsuite/oligo_designer_toolsuite/utils/_gff_parser.py\n",
-      "\n",
-      "Line #    Mem usage    Increment  Occurrences   Line Contents\n",
-      "=============================================================\n",
-      "    42    106.3 MiB    106.3 MiB           1       def read_gff(self, file: str, target_lines: int = None):\n",
-      "    43                                                 \"\"\"Open an optionally gzipped GFF3/GTF file and return a pandas.DataFrame.\n",
-      "    44                                         \n",
-      "    45                                                 :param file: Filename of GFF3/GTF file.\n",
-      "    46                                                 :type file: str\n",
-      "    47                                                 :param target_lines: Read the first n lines or leave 'None' to read all lines, default: None\n",
-      "    48                                                 :type target_lines: int\n",
-      "    49                                                 :return: DataFrame with GFF§/GTF file content.\n",
-      "    50                                                 :rtype: pandas.DataFrame\n",
-      "    51                                                 \"\"\"\n",
-      "    52                                                 # Each column is a list stored as a value in this dict.\n",
-      "    53    106.3 MiB      0.0 MiB           1           result = defaultdict(list)\n",
-      "    54                                         \n",
-      "    55   1071.3 MiB -10460274.9 MiB      747540           for i, line in enumerate(self._read_lines(file, target_lines)):\n",
-      "    56   1071.3 MiB -189793956.8 MiB    13566862               for key in line.keys():\n",
-      "    57                                                         # This key has not been seen yet, so set it to None for all\n",
-      "    58                                                         # previous lines.\n",
-      "    59   1071.3 MiB -179334265.1 MiB    12819322                   if key not in result:\n",
-      "    60    813.3 MiB     -8.8 MiB          57                       result[key] = [None] * i\n",
-      "    61                                         \n",
-      "    62                                                     # Ensure this row has some value for each column.\n",
-      "    63   1071.3 MiB -601905450.9 MiB    41361049               for key in result.keys():\n",
-      "    64   1071.3 MiB -591445211.2 MiB    40613509                   result[key].append(line.get(key, None))\n",
-      "    65                                         \n",
-      "    66                                                 result = pd.DataFrame(result)\n",
-      "    67                                                 cols = [\n",
-      "    68                                                     col\n",
-      "    69                                                     for col in result.columns\n",
-      "    70                                                     if col in self.GFF_HEADER or not result[col].isnull().all()\n",
-      "    71                                                 ]\n",
-      "    72                                                 dataframe = result[cols]\n",
-      "    73                                         \n",
-      "    74                                                 if self.dataframe_gff is not None:\n",
-      "    75                                                     warnings.warn(f\"Overwriting existing gff dataframe!\")\n",
-      "    76                                                 self.dataframe_gff = dataframe\n",
-      "    77                                         \n",
-      "    78                                                 return dataframe"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%mprun -f parser.read_gff parser.read_gff(file_gff, target_lines=target_lines)"
    ]
@@ -269,7 +230,7 @@
   "kernelspec": {
    "display_name": "ODT",
    "language": "python",
-   "name": "python3"
+   "name": "odt"
   },
   "language_info": {
    "codemirror_mode": {
