--- a/tutorials/build_a_custom_pipeline.ipynb
+++ b/tutorials/build_a_custom_pipeline.ipynb
@@ -97,9 +97,9 @@
     "\n",
     "From the provided genome annotation (fasta file), specific regions can be extracted. In particular, it is possible to use: \n",
     "\n",
-    "- the whole genome\n",
-    "- the transcriptome\n",
-    "- the coding sequence (CDS)\n",
+    "* the whole genome\n",
+    "* the transcriptome\n",
+    "* the coding sequence (CDS)\n",
     "\n",
     "To create specific regions, we need a `CustomGenomicRegionGenerator`, or a class that inherits from it (e.g. `NcbiGenomicRegionGenerator` and `EnsemblGenomicRegionGenerator`) and call the method `generate_transcript_reduced_representation()` to extract the transcriptome in a reduced representation form from the given files. These classes differ on how the the fasta and the GTF (GFF3 not supported) files used are obtained. The first one uses local files while the others dowload them respectively form the NCBI or Ensambl ftp server. *Note: that the GTF file must contain coordinate as well as transcript ID and exon number infomration to generate a transcriptome or coding sequence.* In the output fasta file, the header of each sequence starts with '>' and contain the following information: \n",
     "region_id, additional_information and coordinates (chrom, start, end, strand)\n",
@@ -294,7 +294,19 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'GC_content_min'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[39m# initialize the filters clasees\u001b[39;00m\n\u001b[1;32m     20\u001b[0m masked_sequences \u001b[39m=\u001b[39m MaskedSequences()\n\u001b[0;32m---> 21\u001b[0m gc_content \u001b[39m=\u001b[39m GCContent(GC_content_min\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39;49m\u001b[39mGC_content_min\u001b[39;49m\u001b[39m\"\u001b[39;49m], GC_content_max\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39mGC_content_max\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m     22\u001b[0m melting_temperature \u001b[39m=\u001b[39m MeltingTemperatureNN(\n\u001b[1;32m     23\u001b[0m     Tm_min\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39mTm_min\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[1;32m     24\u001b[0m     Tm_max\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39mTm_max\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[1;32m     25\u001b[0m     Tm_parameters\u001b[39m=\u001b[39mTm_params, \n\u001b[1;32m     26\u001b[0m     Tm_chem_correction_parameters\u001b[39m=\u001b[39mTm_chem_correction_param\n\u001b[1;32m     27\u001b[0m )\n\u001b[1;32m     28\u001b[0m padlock_arms \u001b[39m=\u001b[39m PadlockArms(\n\u001b[1;32m     29\u001b[0m     min_arm_length\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39mmin_arm_length\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m     30\u001b[0m     max_arm_Tm_dif\u001b[39m=\u001b[39mconfig[\u001b[39m\"\u001b[39m\u001b[39mmax_arm_Tm_dif\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     34\u001b[0m     Tm_chem_correction_parameters\u001b[39m=\u001b[39mTm_chem_correction_param,\n\u001b[1;32m     35\u001b[0m )\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'GC_content_min'"
+     ]
+    }
+   ],
    "source": [
     "from oligo_designer_toolsuite.oligo_property_filter import (\n",
     "    PropertyFilter,\n",
@@ -364,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
