test new ftp loader

--- a/tests/notebooks/test_utils.ipynb
+++ b/tests/notebooks/test_utils.ipynb
@@ -26,9 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gff3', '108', 'GRCh38')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gtf', '108', 'GRCh38')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa', '108', 'GRCh38')\n"
+     ]
+    }
+   ],
    "source": [
     "##### Test Loader Ensemble\n",
     "\n",
@@ -51,9 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gff', '110', 'GRCh38.p14')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gtf', '110', 'GRCh38.p14')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.fna', '110', 'GRCh38.p14')\n"
+     ]
+    }
+   ],
    "source": [
     "##### Test Loader NCBI\n",
     "\n",
@@ -78,16 +98,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.gff', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.gtf', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_009914755.1_T2T-CHM13v2.0_genomic.fna', 'GCF_009914755.1-RS_2023_03', 'T2T-CHM13v2.0')\n"
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gff', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gtf', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n",
+      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.fna', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n"
      ]
     }
    ],
@@ -230,7 +250,7 @@
   "kernelspec": {
    "display_name": "ODT",
    "language": "python",
-   "name": "odt"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -244,12 +264,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "a7f4130ed83df3b8f06d6c345c87a414b57058a10ea01094325e8ae4cc394d7d"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
