--- a/tests/notebooks/test_utils.ipynb
+++ b/tests/notebooks/test_utils.ipynb
@@ -5,137 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test FTP Loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "import shutil\n",
-    "\n",
-    "cwd = os.getcwd()\n",
-    "\n",
-    "from oligo_designer_toolsuite.utils import FtpLoaderEnsembl, FtpLoaderNCBI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gff3', '108', 'GRCh38')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.108.gtf', '108', 'GRCh38')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa', '108', 'GRCh38')\n"
-     ]
-    }
-   ],
-   "source": [
-    "##### Test Loader Ensemble\n",
-    "\n",
-    "#Parameters\n",
-    "dir_output = os.path.join(os.path.dirname(os.getcwd()), 'output') # create the complete path for the output directory\n",
-    "\n",
-    "species= 'homo_sapiens' # available species: human or mouse\n",
-    "annotation_release= '108'\n",
-    "\n",
-    "#initialize\n",
-    "loader_ensemble=FtpLoaderEnsembl(dir_output, species, annotation_release)\n",
-    "\n",
-    "#retrieve files\n",
-    "print(loader_ensemble.download_files(\"gff\"))\n",
-    "print(loader_ensemble.download_files(\"gtf\"))\n",
-    "print(loader_ensemble.download_files(\"fasta\"))\n",
-    "\n",
-    "shutil.rmtree(dir_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gff', '110', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gtf', '110', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.fna', '110', 'GRCh38.p14')\n"
-     ]
-    }
-   ],
-   "source": [
-    "##### Test Loader NCBI\n",
-    "\n",
-    "## Test for release <= 110\n",
-    "#Parameters\n",
-    "dir_output = os.path.join(os.path.dirname(os.getcwd()), 'output') # create the complete path for the output directory\n",
-    "\n",
-    "taxon = 'vertebrate_mammalian' # taxon the species belongs to\n",
-    "species= 'Homo_sapiens' # available species: human or mouse\n",
-    "annotation_release= '110'\n",
-    "\n",
-    "#initialize\n",
-    "loader_ncbi=FtpLoaderNCBI(dir_output, taxon, species, annotation_release)\n",
-    "\n",
-    "#retrieve files\n",
-    "print(loader_ncbi.download_files(\"gff\"))\n",
-    "print(loader_ncbi.download_files(\"gtf\"))\n",
-    "print(loader_ncbi.download_files(\"fasta\"))\n",
-    "\n",
-    "shutil.rmtree(dir_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gff', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.gtf', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n",
-      "('/Users/lisa.barros/projects/GP0002_Oligo_Designer_Toolsuite/V19603_Merfish_SeqFish_Probe_Designer/oligo-designer-toolsuite/tests/output/GCF_000001405.40_GRCh38.p14_genomic.fna', 'GCF_000001405.40-RS_2023_03', 'GRCh38.p14')\n"
-     ]
-    }
-   ],
-   "source": [
-    "## Test for release > 110 -> changed folder structure\n",
-    "#Parameters\n",
-    "dir_output = os.path.join(os.path.dirname(os.getcwd()), 'output') # create the complete path for the output directory\n",
-    "\n",
-    "taxon = 'vertebrate_mammalian' # taxon the species belongs to\n",
-    "species= 'Homo_sapiens' # available species: human or mouse\n",
-    "annotation_release= 'current'\n",
-    "\n",
-    "#initialize\n",
-    "loader_ncbi=FtpLoaderNCBI(dir_output, taxon, species, annotation_release)\n",
-    "\n",
-    "#retrieve files\n",
-    "print(loader_ncbi.download_files(\"gff\"))\n",
-    "print(loader_ncbi.download_files(\"gtf\"))\n",
-    "print(loader_ncbi.download_files(\"fasta\"))\n",
-    "\n",
-    "shutil.rmtree(dir_output)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Test Data Parser"
    ]
   },
@@ -145,6 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_columns', None)\n",
     "import pickle\n",
@@ -174,7 +44,7 @@
     "file_gff = os.path.join(os.path.dirname(os.getcwd()), \"data/custom_GCF_000001405.40_GRCh38.p14_genomic_chr16.gff\")\n",
     "dataframe_gff = parser.read_gff(file_gff, target_lines=10)\n",
     "\n",
-    "assert dataframe_gff.shape[1] == 23, \"error: GFF3 dataframe not correctly loaded\"\n"
+    "assert dataframe_gff.shape[1] == 23, \"error: GFF3 dataframe not correctly loaded\""
    ]
   },
   {
