add homodimer filter

--- a/tests/notebooks/test_oligo_property_filter.ipynb
+++ b/tests/notebooks/test_oligo_property_filter.ipynb
@@ -32,12 +32,13 @@
             "    HardMaskedSequenceFilter,\n",
             "    ProhibitedSequenceFilter,\n",
             "    HomopolymericRunsFilter,\n",
+            "    ThreePrimeSequenceFilter,\n",
+            "    FivePrimeSequenceFilter,\n",
             "    GCContentFilter,\n",
             "    GCClampFilter,\n",
             "    MeltingTemperatureNNFilter,\n",
+            "    HomodimerFilter,\n",
             "    SecondaryStructureFilter,\n",
-            "    ThreePrimeSequenceFilter,\n",
-            "    FivePrimeSequenceFilter,\n",
             ")\n",
             "from oligo_designer_toolsuite.oligo_property_filter import PadlockArmsFilter\n"
          ]
@@ -280,7 +281,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": 8,
          "metadata": {},
          "outputs": [
             {
@@ -318,7 +319,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [
             {
@@ -348,7 +349,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": 10,
          "metadata": {},
          "outputs": [
             {
@@ -360,7 +361,7 @@
             }
          ],
          "source": [
-            "GC_clamp_filter = GCClampFilter(n=3)\n",
+            "GC_clamp_filter = GCClampFilter(n_bases=3, n_GC=1)\n",
             "\n",
             "seq_remove = Seq(\"TCGGGCGGGAGATCCAGGTGGCGCGCAAAAA\")\n",
             "res, _ = GC_clamp_filter.apply(seq_remove)\n",
@@ -381,12 +382,12 @@
          "cell_type": "markdown",
          "metadata": {},
          "source": [
-            "## Test Melting Temperature"
+            "## Test Sequence Structure"
          ]
       },
       {
          "cell_type": "code",
-         "execution_count": 10,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [
             {
@@ -440,7 +441,37 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 11,
+         "execution_count": 12,
+         "metadata": {},
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "{'secondary_structure_DG': 0.5}\n"
+               ]
+            }
+         ],
+         "source": [
+            "secondary_structure_filter = SecondaryStructureFilter(T=37, thr_DG=0)\n",
+            "\n",
+            "seq_remove = Seq(\"TGGCTTGGGCCTTTCCAAGCCCCCATTTGAGCT\")\n",
+            "res, _ = secondary_structure_filter.apply(seq_remove)\n",
+            "assert (\n",
+            "    res == False\n",
+            "), f\"error: A sequence ({seq_remove}) not fulfilling the condition with has been accepted!\"\n",
+            "\n",
+            "seq_keep = Seq(\"TGTCGGATCTCTTCAACAAGCTGGTCATGA\")\n",
+            "res, feature = secondary_structure_filter.apply(seq_keep)\n",
+            "assert (\n",
+            "    res == True\n",
+            "), f\"error: A sequence ({seq_keep}) fulfilling the conditions has not been accepted!\"\n",
+            "print(feature)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 13,
          "metadata": {},
          "outputs": [
             {
@@ -477,7 +508,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 22,
+         "execution_count": 14,
          "metadata": {},
          "outputs": [
             {
