--- a/tests/notebooks/test_oligo_property_filter.ipynb
+++ b/tests/notebooks/test_oligo_property_filter.ipynb
@@ -233,7 +233,43 @@
             }
          ],
          "source": [
-            "homopolymeric_run_filter = HomopolymericRunsFilter(base=\"A\", n=4)\n",
+            "prohibited_sequence_filter2 = ProhibitedSequenceFilter(prohibited_sequence=[\"ACT\", \"GGG\"])\n",
+            "\n",
+            "seq_remove = Seq(\"GGGGGGGGGGGGGGACT\")\n",
+            "res, _ = prohibited_sequence_filter2.apply(seq_remove)\n",
+            "assert (\n",
+            "    res == False\n",
+            "), f\"error: A sequence ({seq_remove}) not fulfilling the condition has been accepted!\"\n",
+            "\n",
+            "seq_remove = Seq(\"GGGGGGGGGGGGGGATC\")\n",
+            "res, _ = prohibited_sequence_filter2.apply(seq_remove)\n",
+            "assert (\n",
+            "    res == False\n",
+            "), f\"error: A sequence ({seq_remove}) not fulfilling the condition has been accepted!\"\n",
+            "\n",
+            "seq_keep = Seq(\"GGAATC\")\n",
+            "res, feature = prohibited_sequence_filter2.apply(seq_keep)\n",
+            "assert (\n",
+            "    res == True\n",
+            "), f\"error: A sequence ({seq_keep}) fulfilling the conditions has not been accepted!\"\n",
+            "print(feature)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 7,
+         "metadata": {},
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "{}\n"
+               ]
+            }
+         ],
+         "source": [
+            "homopolymeric_run_filter = HomopolymericRunsFilter(base_n={\"A\": 4, \"C\": 5})\n",
             "\n",
             "seq_remove = Seq(\"GGGGGGGGGGGGGGAAAAA\")\n",
             "res, _ = homopolymeric_run_filter.apply(seq_remove)\n",
@@ -251,7 +287,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 8,
          "metadata": {},
          "outputs": [
             {
@@ -281,7 +317,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 9,
          "metadata": {},
          "outputs": [
             {
@@ -319,7 +355,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": 10,
          "metadata": {},
          "outputs": [
             {
@@ -349,7 +385,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 10,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [
             {
@@ -387,7 +423,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 11,
+         "execution_count": 12,
          "metadata": {},
          "outputs": [
             {
@@ -441,7 +477,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 12,
+         "execution_count": 13,
          "metadata": {},
          "outputs": [
             {
@@ -471,7 +507,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 13,
+         "execution_count": 14,
          "metadata": {},
          "outputs": [
             {
@@ -508,7 +544,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 14,
+         "execution_count": 15,
          "metadata": {},
          "outputs": [
             {
