add test for property filter api with oligo db

--- a/tests/notebooks/test_oligo_property_filter.ipynb
+++ b/tests/notebooks/test_oligo_property_filter.ipynb
@@ -40,7 +40,10 @@
             "    HomodimerFilter,\n",
             "    SecondaryStructureFilter,\n",
             ")\n",
-            "from oligo_designer_toolsuite.oligo_property_filter import PadlockArmsFilter\n"
+            "from oligo_designer_toolsuite.oligo_property_filter import PadlockArmsFilter\n",
+            "\n",
+            "from oligo_designer_toolsuite.database import OligoDatabase\n",
+            "from oligo_designer_toolsuite.sequence_generator import OligoSequenceGenerator"
          ]
       },
       {
@@ -570,6 +573,80 @@
             "    res == True\n",
             "), f\"error: A sequence ({seq_keep}) fulfilling the conditions has not been accepted!\"\n",
             "print(feature)"
+         ]
+      },
+      {
+         "cell_type": "markdown",
+         "metadata": {},
+         "source": [
+            "## Test PropertyFilter API"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "masked_sequences_filter = HardMaskedSequenceFilter(mask=\"N\")\n",
+            "GC_content_filter = GCContentFilter(GC_content_min=40, GC_content_max=60)\n",
+            "GC_clamp_filter = GCClampFilter(n_bases=2, n_GC=1)\n",
+            "\n",
+            "Tm_filter = MeltingTemperatureNNFilter(\n",
+            "    Tm_min=52,\n",
+            "    Tm_max=67,\n",
+            "    Tm_parameters=Tm_parameters,\n",
+            "    Tm_chem_correction_parameters=Tm_chem_correction_parameters,\n",
+            ")\n",
+            "secondary_structure_filter = SecondaryStructureFilter(37, -5)\n",
+            "\n",
+            "Tm_arms_filter = PadlockArmsFilter(\n",
+            "    arm_length_min=5,\n",
+            "    arm_Tm_dif_max=5,\n",
+            "    arm_Tm_min=40,\n",
+            "    arm_Tm_max=60,\n",
+            "    Tm_parameters=Tm_parameters,\n",
+            "    Tm_salt_correction_parameters=Tm_salt_correction_parameters,\n",
+            "    Tm_chem_correction_parameters=Tm_chem_correction_parameters,\n",
+            ")\n",
+            "\n",
+            "filters = [\n",
+            "    masked_sequences_filter,\n",
+            "    GC_content_filter,\n",
+            "    GC_clamp_filter,\n",
+            "    Tm_filter,\n",
+            "    secondary_structure_filter,\n",
+            "    Tm_arms_filter,\n",
+            "]\n",
+            "property_filter = PropertyFilter(filters=filters)"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "oligo_sequence_generator = OligoSequenceGenerator()\n",
+            "\n",
+            "file_fasta_random_seqs1 = oligo_sequence_generator.create_sequences_random(\n",
+            "    filename_out=\"random_sequences1\",\n",
+            "    length_sequences=30,\n",
+            "    num_sequences=100,\n",
+            "    name_sequences=\"random_sequences1\",\n",
+            "    base_alphabet_with_probability={\"A\": 0.1, \"C\": 0.3, \"G\": 0.4, \"T\": 0.2},\n",
+            ")\n",
+            "\n",
+            "oligos = OligoDatabase(min_oligos_per_region=2, write_regions_with_insufficient_oligos=True)\n",
+            "\n",
+            "oligos.load_sequences_from_fasta(\n",
+            "    file_fasta_in=file_fasta_random_seqs1,\n",
+            "    sequence_type=\"oligo\",\n",
+            "    region_ids=[\"random_sequences1\"],\n",
+            "    database_overwrite=True,\n",
+            ")\n",
+            "\n",
+            "property_filter.apply(sequence_type=\"oligo\", oligo_database=oligos, n_jobs=2)"
          ]
       }
    ],
